# ray-tracer

./: BVHScene.json  BVHScene.ppm  CMakeLists.txt  DoF.json  DoF.ppm  README.md  example.ppm
cameras/: Pinhole.cpp  Pinhole.h  ThinLens.cpp  ThinLens.h
core/: Camera.cpp  Camera.h  LightSource.cpp  LightSource.h  Material.cpp  Material.h  RayHitStructs.h  RayTracer.cpp  RayTracer.h  Scene.cpp  Scene.h  Shape.cpp  Shape.h  testout.ppm
examples/: example.json  jsonExample.cpp
lights/: AreaLight.h  PointLight.h
main/: main.cpp
materials/: BlinnPhong.cpp  BlinnPhong.h  Reflective.h  Texture.cpp  Texture.h  Transparent.h
shapes/: BVH.cpp  BVH.h  RectangleXY.cpp  RectangleXY.h  ShapesList.h  Sphere.cpp  Sphere.h  Triangle.cpp  Triangle.h  TriangleMesh.cpp  TriangleMesh.h  aabb.h
